examples/test/testpolicy1821.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1821
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key45: value48
      key36: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value32
      podSelector:
        matchLabels:
          key9: value35
          key15: value9
          key17: value26
